--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <h1>Games</h1>
     <ul class="games-list">
       <li><a href="snake/">Word Snake</a></li>
-      <li><a href="snake/"></a></li>
       <li><a href="cipher/"><!-- <img src="images/cipher.png"> --> Ciphered sentenced</a></li>
+      <li><a href="crossword/">Crossword</a></li>
     </ul>
   </body>
 </html>
